--- a/apps/care-hub/src/app/globals.css
+++ b/apps/care-hub/src/app/globals.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "Haas Grot Disp Trial";
+  src: url("/fonts/HaasGrot Disp 55 Rm Trial.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   color-scheme: light;
   --surface: #f4f2ee;
@@ -11,6 +19,7 @@
   --radius: 16px;
   --font-display: "Space Grotesk", system-ui;
   --font-body: "IBM Plex Sans", system-ui;
+  --font-haas: "Haas Grot Disp Trial", system-ui;
 }
 
 .theme-default {
